navbar z-index fix

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -8,6 +8,7 @@
     padding-left: 18rem;
     font-size: 1.6rem;
     background-color: white;
+    z-index: 1000;
 
     & ul {
         display: flex;
